--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,8 @@ html {
   scroll-behavior: smooth;
 }
 
+
+
 #navbar {
   font-weight: 500;
   color: #2563eb;
@@ -72,3 +74,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+#highlight {
+  font-weight: 500;
+  color: #2563eb;
+  text-decoration: inherit;
+}
+#highlight:hover {
+  color: #1d4ed8;
+}
